chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: quay.io/wolfgangntnx/frontend:latest
        resources:
          requests:
            memory: "3Gi"
            cpu: "1"
          # limits:
          #   memory: "256Mi"
          #   cpu: "500m"
