chart/templates/doc-ingest-fn.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: doc-ingest
spec:
  template:
    spec:
      containers:
      - image: quay.io/wolfgangntnx/doc-ingest:0.2.2
        env:
        - name: MILVUS_HOST
          value: "milvus.gpt01mgmt01.cloudnative.nvdlab.net"
