chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 500M
spec:
  ingressClassName: "nginx"
  rules:
  - host: frontend.gpt01dev01.cloudnative.nvdlab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8000
  tls:
  - hosts:
    - frontend.gpt01dev01.cloudnative.nvdlab.net
    secretName: frontend-tld-secret
